--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 
 project(SleepingTA VERSION 1.0)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 include_directories(models)
@@ -14,11 +14,12 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 find_package(Threads REQUIRED)
 
 add_library(student src/student.cpp)
+add_library(office src/office.cpp)
 add_library(ta src/ta.cpp)
 
 # Main program executable
 add_executable(SleepingTA main.cpp)
-target_link_libraries(SleepingTA student ta)
+target_link_libraries(SleepingTA student office ta)
 
 # If your program or any of the libraries use threads, link them with pthreads
 target_link_libraries(SleepingTA Threads::Threads) # Link pthreads to your main executable
